force-app/main/default/objects/ssot__LearnerPathwayItem__dlm/fields/ssot__LearnerPathwayId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearnerPathwayId__c</fullName>
    <label>Learner Pathway</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearnerPathwayId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>