force-app/main/default/objects/ssot__LearnerPathwayItem__dlm/fields/ssot__rel_1719817604988_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817604988_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerPathwayItem_AcademicSessionId_rel</label>
    <referenceTo>ssot__AcademicSession__dlm</referenceTo>
    <relationshipLabel>LearnerPathwayItem_AcademicSessionId_rel</relationshipLabel>
    <relationshipName>rel_1719817604988_end</relationshipName>
    <type>Lookup</type>
</CustomField>