force-app/main/default/objects/ssot__LearnerPathwayItem__dlm/fields/ssot__rel_1719819886694_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819886694_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerPathwayItem_LearningPathwayTe_rel</label>
    <referenceTo>ssot__LearningPathwayTemplateItem__dlm</referenceTo>
    <relationshipLabel>LearnerPathwayItem_LearningPathwayTe_rel</relationshipLabel>
    <relationshipName>rel_1719819886694_end</relationshipName>
    <type>Lookup</type>
</CustomField>