force-app/main/default/objects/ssot__LearnerPathwayItem__dlm/fields/ssot__rel_1719819889072_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819889072_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerPathwayItem_LearningId_map_Le_rel</label>
    <referenceTo>ssot__Learning__dlm</referenceTo>
    <relationshipLabel>LearnerPathwayItem_LearningId_map_Le_rel</relationshipLabel>
    <relationshipName>rel_1719819889072_end</relationshipName>
    <type>Lookup</type>
</CustomField>