force-app/main/default/objects/ssot__LearnerPathwayItem__dlm/fields/ssot__Year__c.field-meta.xml
<CustomField>
    <fullName>ssot__Year__c</fullName>
    <label>Year</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Year</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>